bin/testsuite/tests/compiler/src/errors/compiler136.swg
#global testpass syntax;

#global testerror "Err0308";
attr toto(b: ) -> var;
